--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div class="collapse navbar-collapse justify-content-md-start" id="main-menu">
           <ul class="navbar-nav text-uppercase">
             <li class="nav-item">
-              <a class="nav-link" href="#home">Trang chủ</a>
+              <a class="nav-link" href="index.html">Trang chủ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">Thông tin</a>
+              <a class="nav-link" href="aboutdemo.html">Về tác giả</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#services">Services</a>
@@ -48,10 +48,10 @@
         <div class="card" id="border">
           <img src="Image/ride1.jpg" alt="" />
           <div class="info">
-            <h1>Nom pho ham long</h1>
+            <h1 id="foodName"></h1>
             <div class="favo">
               <a href="#" class="fa fa-heart" style="font-size: 20px; color: whitesmoke; text-decoration: unset;">
-                <span>1234</span>
+                <span id="like"></span>
               </a>
             </div>
             <a href="#" id="btn">Chi tiết</a>
