--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
             <li class="nav-item">
               <a class="nav-link" href="index.html">Trang chủ</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="aboutdemo.html">Về tác giả</a>
-            </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#services">Services</a>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="allfood.html">Món ăn khác?</a>
+              <a class="nav-link" href="allfood.html">Nhiều món hơn tại đây</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="aboutdemo.html">Về tác giả</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -46,15 +46,15 @@
       </div>
       <div class="wrapper">
         <div class="card" id="border">
-          <img src="Image/ride1.jpg" alt="" />
+          <img id="imgfood" src="" alt="" />
           <div class="info">
-            <h1 id="foodName"></h1>
+            <h3 id="foodName"></h3>
             <div class="favo">
               <a href="#" class="fa fa-heart" style="font-size: 20px; color: whitesmoke; text-decoration: unset;">
                 <span id="like"></span>
               </a>
             </div>
-            <a href="#" id="btn">Chi tiết</a>
+            <a href="" id="btn">Món khác?</a>
           </div>
         </div>
       </div>
