--- a/allfood.html
+++ b/allfood.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
+    
   </head>
   <body
     style="
@@ -32,7 +33,7 @@
           src="Image/logoFood36streets.png"
           width="50"
           height="50"
-          style="margin-left: 35px"
+          style="margin-left: 50px"
           alt=""
         />
       </a>
@@ -78,20 +79,26 @@
     </div>
     <div id="myModal" class="modal">
       <span class="close" style="color: white">&times;</span>
-      <div class="content" id="divContent">
-        <div class="row" id="detail">
-          <img id="imgs" src="" alt="" />
-          <div id="info">
-            <h1 id="caption"></h1>
-            <hr/>
-            <p id="address"></p>
-            <p id="desc" style="max-width: 500px"></p>
-            <p id="like"><i class="fas fa-heart"></i> </p>
-            <p id="price"></p>
+      <div class="dialog">
+        <div class="content" id="divContent">
+          <div class="row" id="detail">
+            <img id="imgs" src="" alt="" />
+            <div id="info">
+              <h1 id="caption"></h1>
+              <hr/>
+              <p id="address"></p>
+              <p id="desc" style="max-width: 500px"></p>
+              <p id="like"><i class="fas fa-heart"></i> </p>
+              <p id="price"></p>
+            </div>
           </div>
+          <hr>
         </div>
       </div>
     </div>
+    <!-- test new modal -->
+
+    <!-- end test -->
   </body>
   <!-- <script src="JS/SS10_LAB.js"></script> -->
   <script src="JS/imgmodal.js"></script>
